--- a/randomcolor.css
+++ b/randomcolor.css
@@ -1,5 +1,3 @@
-
-
 h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
@@ -17,7 +15,7 @@ div{
 }
 button{
  margin-top: 40px;
- margin-left:47%;
+ margin-left: 36rem;
     padding: 5px 15px 5px 15px;
     font-size: 15px;
     background-color: black;
@@ -32,23 +30,3 @@ h4{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
 }
-
-@media screen and (max-width:500px) {
-    div{
-        height: 180px;
-        width: 100%;
-        margin: auto;
-        border: 5px solid black;
-        border-radius: 6px;
-    }
-    button{
-        margin-left: 35%;
-    }
-
-    
-}
-    
-    
-
-    
-
