--- a/NewPortfolio.css
+++ b/NewPortfolio.css
@@ -46,8 +46,8 @@ li {
 .navdiv {
     display: flex;
     width: 100%;
-    height: 70px;
-    justify-content: space-evenly;
+    /* height: 70px; */
+    justify-content: space-between;
     align-items: center;
 
 }
@@ -64,15 +64,21 @@ li {
     transition: 0.4s;
 }
 
-.fa-moon {
+.theme-icon {
     font-size: 26px;
     display: flex;
+    background-color: black;
     justify-content: center;
     align-items: center;
     margin: 20px;
+    border: none;
     border-radius: 50%;
     transition: 0.3s;
 }
+
+.theme-icon:hover {
+    transform: rotate(20deg);
+  }
 
 li:hover {
     color: orange;
