--- a/media.css
+++ b/media.css
@@ -20,11 +20,11 @@
     .navitems ul{
         position: absolute; 
         right: 2rem;
-        background-color: rgb(107, 106, 106);
-        padding: 7px;
+       background-color: var(--nav-ul-bg);
+        padding: 9px;
         border-radius: 5px;
         margin-top: 20px;
-        font-size: 7px;
+        /* font-size: 7px; */
         flex-direction: column;
     }
     .navitems.active{
@@ -32,8 +32,8 @@
         display: block;
     }
     li{
-        font-size: 13px;
-        margin: 8px;
+        font-size: 16px;
+        margin: 11px;
     }
     
 }
@@ -67,7 +67,9 @@
         width: 17.8rem;
     }
     
-    
+    .skills-section{
+        margin-top: 8rem;
+    }
     
     .thirdOne, .thirdTwo{
         margin-left: 34%;
@@ -190,9 +192,12 @@
     .Email, .name, .message, .number{
         height: 12px;
         border: 2px solid orange;
-        font-size: 12px;
+        /* font-size: 12px; */
         width: 100%;
         /* text-align: center; */
+    }
+    .numbers{
+        font-size: 16px;
     }
     
     .contact_form{
@@ -265,8 +270,11 @@
         font-size: 12px;
       }
      .Email, .name, .message, .number{
-        font-size: 14px;
+        font-size: 17px;
     
         /* text-align: center; */
+    }
+    .skill-skills{
+        font-size: 14px;
     }
 }
